--- a/css/main.css
+++ b/css/main.css
@@ -3716,11 +3716,11 @@ form textarea:required:valid {
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  height: 520px;
+  height: auto;
 }
 @media only screen and (min-width: 1400px) {
   .cards__item {
-    height: 320px;
+    height: auto;
   }
 }
 
